--- a/package.json
+++ b/package.json
@@ -5,14 +5,26 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "jquery": "^3.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BigUncleYemi/bbc-bandwidthcal.git"
+  },
+  "author": "Big Uncle Yemi",
+  "bugs": {
+    "url": "https://github.com/BigUncleYemi/bbc-bandwidthcal/issues"
+  },
+  "homepage": "https://BigUncleYemi.github.io/bbc-bandwidthcal",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
