--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jquery": "^3.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "serve": "^10.1.2"
   },
   "repository": {
     "type": "git",
